# op-python

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/: dependency-review-config.yml  pull_request_template.md
.github/workflows/: ci-cd.yml
src/op_python/: __init__.py  op_client.py
tests/: test_op_client.py
